# PLC-Poller

./: README.md  index.html  server.py
plc-api-component/: Cargo.toml
plc-api-component/src/: lib.rs
plc-emulator/: Cargo.toml
plc-emulator/src/: main.rs
server/: index.html  server.py
