[package]
name = "plc-api-component"
version = "0.1.0"
authors = ["Ulf Ejlertsson <ulf.ejlertsson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "console",
    "WebSocket",
    "MessageEvent",
    "Blob",
    "FileReader",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
